--- a/style.css
+++ b/style.css
@@ -239,6 +239,98 @@ main {
 /* ... (remaining CSS) ... */
 
 
+/* Forth section */
+.forth-section {
+
+    /* margin-top: 120px; */
+    margin-right: 140px;
+    /* margin-bottom: 120px; */
+    /* Add your desired margin-bottom */
+    margin-left: 140px;
+
+
+}
+
+.forth-section h3 {
+    color: #F00;
+    font-family: Inter;
+    font-size: 24px;
+    margin-bottom: 0;
+    font-weight: 500;
+
+}
+
+.forth-section h2 {
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    text-transform: capitalize;
+    margin-top: 16px;
+    margin-bottom: 0;
+
+}
+
+.forth-section p {
+    width: 896px;
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px;
+    margin-top: 22px;
+    /* 160% */
+}
+
+
+.gift-images1 {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+    justify-content: space-around;
+}
+
+.gift-images1 div {
+    width: 400px;
+    height: 450px;
+
+}
+
+.gift-images1 img {
+    width: 100%;
+    border-radius: 16px;
+   
+    /* background: url(<path-to-image>), lightgray 50% / cover no-repeat; */
+
+}
+
+
+.gift-images2 {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+    justify-content: space-around;
+}
+
+.gift-images2 div {
+    width: 400px;
+    height: 450px;
+
+}
+
+.gift-images2 img {
+    width: 100%;
+    border-radius: 16px;
+   
+    /* background: url(<path-to-image>), lightgray 50% / cover no-repeat; */
+
+}
+
+
+
 /* Subscribe section */
 #subscribe {
     width: 1250px;
@@ -317,12 +409,12 @@ main {
 
 #subscribe form {
 
-  
+
     /* height: 72px; */
     max-width: 400px;
     margin: 20px auto;
     display: flex;
-    gap:10px;
+    gap: 10px;
 }
 
 #subscribe form input {
