--- a/style.css
+++ b/style.css
@@ -239,6 +239,103 @@ main {
 /* ... (remaining CSS) ... */
 
 
+/* bonus-section */
+
+
+.bonus-section {
+
+    /* margin-top: 120px; */
+    margin-right: 140px;
+    /* margin-bottom: 120px; */
+    /* Add your desired margin-bottom */
+    margin-left: 140px;
+
+    display: flex;
+    background: #FFF;
+    justify-content: space-evenly;
+
+
+
+
+}
+
+.bonus-section h3 {
+    color: #F00;
+    font-family: Inter;
+    font-size: 24px;
+    margin-bottom: 0;
+    font-weight: 500;
+
+}
+
+.bonus-section h2 {
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    text-transform: capitalize;
+    margin-top: 16px;
+    margin-bottom: 0;
+
+}
+
+.bonus-section p {
+    width: 393px;
+    height: 128px;
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px;
+    margin-top: 22px;
+
+    /* 160% */
+}
+
+.bonus-section .bonus-image img {
+    width: 364px;
+    height: 364px;
+    border-radius: 463px;
+    border: 15px solid #F00;
+    padding: 25px;
+    margin-left: 30px;
+    margin-right: 100px;
+
+}
+
+.bonus-section .bonus-right h2 {
+    color: #F00;
+    font-family: Inter;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+
+}
+
+.bonus-section .bonus-right p {
+    width: 276px;
+    color: rgba(7, 2, 17, 0.60);
+
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px;
+    /* 160% */
+}
+
+.bonus-section .bonus-right img {
+    width: 140px;
+    height: 140px;
+}
+
+
+
+
 /* Forth section */
 .forth-section {
 
@@ -525,9 +622,10 @@ hr:hover {
 
 }
 
-.copyright{
+.copyright {
     color: #FFF;
     font-size: 24px;
+    font-family: Inters;
     font-weight: 500;
     display: flex;
     justify-content: space-between;
