--- a/style.css
+++ b/style.css
@@ -239,6 +239,64 @@ main {
 /* ... (remaining CSS) ... */
 
 
+
+/* PDT section */
+
+
+.red {
+
+    color: #F00;
+}
+
+.PDT-content{
+    text-align: center;
+    font-family: Inter;
+    font-size: 32px;
+    font-weight: 600;
+    padding-top: 100px;
+}
+
+
+
+
+
+
+
+.PDT-button  {
+    display: inline-flex;
+    padding: 16px 32px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    background: #F00;
+    color: #FFF;
+    text-align: center;
+
+    font-size: 20px;
+
+    font-weight: 700;
+
+    text-transform: uppercase;
+    border: none;
+
+    margin-bottom: -10px;
+}
+
+.PDT {
+
+
+    margin-top: 120px;
+    margin-left: 140px;
+    margin-right: 140px;
+   margin-bottom: 120px;
+
+
+    background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+
+    width: 1320px;
+    height: 482px;
+}
 /* bonus-section */
 
 
@@ -246,7 +304,7 @@ main {
 
     /* margin-top: 120px; */
     margin-right: 140px;
-    /* margin-bottom: 120px; */
+    margin-bottom: 120px;
     /* Add your desired margin-bottom */
     margin-left: 140px;
 
@@ -612,7 +670,7 @@ hr:hover {
     gap: 20px;
     justify-content: center;
     align-items: center;
-    height: 15vh;
+    height: 20vh;
 }
 
 .footer-second img {
